Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/patterns/CaseDefault.out
CaseDefault.java:20:18: compiler.err.preview.feature.disabled.plural: (compiler.misc.feature.pattern.switch)
1 error
